--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
             <version>5.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
